<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/enter_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14sp"
        android:text="@string/enter_sum"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/spent_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_button"
        android:layout_marginTop="10sp"
        android:background="?attr/colorSecondaryVariant"
        android:text="@string/spent_today"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:layout_below="@id/enter_sum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8sp"
        android:fontFamily="@font/khand_regular"
<<<<<<< Updated upstream
=======
        android:onClick="button_press"
>>>>>>> Stashed changes
        android:text="2"
        android:textSize="26sp"
        app:cornerRadius="26sp" />

    <Button
        android:id="@+id/button_1"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:layout_below="@id/enter_sum"
        android:layout_centerInParent="true"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_toStartOf="@id/button_2"
        android:fontFamily="@font/khand_regular"
<<<<<<< Updated upstream
=======
        android:onClick="button_press"
>>>>>>> Stashed changes
        android:text="1"
        android:textSize="26sp"
        app:cornerRadius="26sp" />

    <Button
        android:id="@+id/button_3"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_below="@id/enter_sum"
        android:layout_toEndOf="@id/button_2"
        android:layout_marginStart="8sp"
        android:text="3"
        android:fontFamily="@font/khand_regular"
<<<<<<< Updated upstream
=======
        android:onClick="button_press"
>>>>>>> Stashed changes
        android:layout_marginTop="8sp"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:textSize="26sp"
        app:cornerRadius="26sp" />

    <Button
        android:id="@+id/button_5"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_below="@id/button_2"
        android:layout_centerHorizontal="true"
        android:text="5"
        android:fontFamily="@font/khand_regular"
<<<<<<< Updated upstream
=======
        android:onClick="button_press"
>>>>>>> Stashed changes
        android:layout_marginTop="8sp"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:textSize="26sp"
        app:cornerRadius="26sp" />

    <Button
        android:id="@+id/button_4"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:layout_below="@id/button_2"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_toStartOf="@id/button_2"
        android:fontFamily="@font/khand_regular"
        android:text="4"
        android:textSize="26sp"
<<<<<<< Updated upstream
        app:cornerRadius="26sp" />
=======
        app:cornerRadius="26sp"
        android:onClick="button_press" />
>>>>>>> Stashed changes

    <Button
        android:id="@+id/button_6"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_below="@id/button_2"
        android:layout_toEndOf="@id/button_2"
        android:layout_marginStart="8sp"
        android:text="6"
        android:fontFamily="@font/khand_regular"
        android:layout_marginTop="8sp"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:textSize="26sp"
<<<<<<< Updated upstream
        app:cornerRadius="26sp" />
=======
        app:cornerRadius="26sp"
        android:onClick="button_press" />
>>>>>>> Stashed changes

    <Button
        android:id="@+id/button_8"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_below="@id/button_5"
        android:layout_centerHorizontal="true"
        android:text="8"
        android:fontFamily="@font/khand_regular"
        android:layout_marginTop="8sp"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:textSize="26sp"
<<<<<<< Updated upstream
        app:cornerRadius="26sp" />
=======
        app:cornerRadius="26sp"
        android:onClick="button_press" />
>>>>>>> Stashed changes

    <Button
        android:id="@+id/button_7"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_below="@id/button_5"
        android:layout_toStartOf="@id/button_8"
        android:layout_marginEnd="8sp"
        android:text="7"
        android:fontFamily="@font/khand_regular"
        android:layout_marginTop="8sp"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:textSize="26sp"
<<<<<<< Updated upstream
        app:cornerRadius="26sp" />
=======
        app:cornerRadius="26sp"
        android:onClick="button_press" />
>>>>>>> Stashed changes

    <Button
        android:id="@+id/button_9"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_below="@id/button_5"
        android:layout_toEndOf="@id/button_8"
        android:layout_marginStart="8sp"
        android:text="9"
        android:fontFamily="@font/khand_regular"
        android:layout_marginTop="8sp"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:textSize="26sp"
<<<<<<< Updated upstream
        app:cornerRadius="26sp" />
=======
        app:cornerRadius="26sp"
        android:onClick="button_press" />
>>>>>>> Stashed changes

    <Button
        android:id="@+id/button_0"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_below="@id/button_8"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:fontFamily="@font/khand_regular"
        android:layout_marginTop="8sp"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:textSize="26sp"
<<<<<<< Updated upstream
        app:cornerRadius="26sp" />
=======
        app:cornerRadius="26sp"
        android:onClick="button_press" />
>>>>>>> Stashed changes

    <Button
        android:id="@+id/button_point"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_below="@id/button_8"
        android:layout_toStartOf="@id/button_0"
        android:layout_marginEnd="8sp"
        android:text="."
        android:fontFamily="@font/khand_regular"
        android:layout_marginTop="8sp"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:textSize="26sp"
<<<<<<< Updated upstream
        app:cornerRadius="26sp" />
=======
        app:cornerRadius="26sp"
        android:onClick="button_press" />
>>>>>>> Stashed changes

    <Button
        android:id="@+id/button_del"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:layout_below="@id/button_8"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_toEndOf="@id/button_0"
        android:fontFamily="@font/khand_regular"
        android:text="B"
        android:textSize="26sp"
        app:cornerRadius="26sp" />

    <Button
        android:id="@+id/diagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cloth_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16sp"
        android:layout_toStartOf="@id/cloth_text"
        android:text="@string/diagram"
        android:textSize="18sp"
        app:cornerRadius="20sp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cloth_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16sp"
        android:layout_toEndOf="@id/cloth_text"
        android:text="@string/add_button"
        android:textSize="18sp"
        app:cornerRadius="20sp" />

    <Button
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spent_today"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="10sp"
        android:text="@string/history"
        android:textSize="18sp"
        app:cornerRadius="18sp" />

    <ImageButton
        android:id="@+id/transport_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16sp"
        app:srcCompat="@drawable/transport" />

    <TextView
        android:id="@+id/transport_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/transport_button"
        android:layout_centerInParent="true"
        android:text="@string/transport_button"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/food_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="45sp"
        android:layout_toStartOf="@id/button_2"
        app:srcCompat="@drawable/food" />

    <TextView
        android:id="@+id/food_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_button"
        android:layout_marginEnd="60sp"
        android:layout_toStartOf="@id/transport_button"
        android:text="@string/food_button"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/cloth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/transport_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        app:srcCompat="@drawable/cloth" />

    <TextView
        android:id="@+id/cloth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cloth_button"
        android:layout_centerInParent="true"
        android:text="@string/cloth_button"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/games_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/transport_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="45sp"
        android:layout_toStartOf="@id/button_2"
        app:srcCompat="@drawable/games" />

    <TextView
        android:id="@+id/games_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/games_button"
        android:layout_marginEnd="30sp"
        android:layout_toStartOf="@id/transport_button"
        android:text="@string/games_button"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_0"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45sp"
        android:layout_marginTop="16sp"
        android:layout_toEndOf="@id/button_2"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_button"
        android:layout_marginStart="55sp"
        android:layout_toEndOf="@id/transport_button"
        android:text="@string/home_button"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/other_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/transport_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:layout_marginStart="45sp"
        android:layout_toEndOf="@id/button_2"
        app:srcCompat="@drawable/other" />

    <TextView
        android:id="@+id/other_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/other_button"
        android:layout_marginStart="45sp"
        android:layout_toEndOf="@id/transport_button"
        android:text="@string/other_button"
        android:textSize="16sp" />

</RelativeLayout>